tooling/nargo_cli/tests/snapshots/compile_failure/signed_integer_literal_underflow/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The value `-129` cannot fit into `i8` which has range `-128..=127`
  ┌─ src/main.nr:2:9
  │
2 │     foo(-129)
  │         ----
  │
  = Call stack:
    1. src/main.nr:2:9

Aborting due to 1 previous error
